Add bow and arrow
Adds a bow and arrow. The player may select this weapon with F5. The
arrow can shoot across the map, but the player must draw it back before
it can fire, making it slow and difficult to use for short range combat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,10 @@ list(APPEND SPRITES
     sprites/arrow_north.spm
     sprites/arrow_south.spm
     sprites/arrow_west.spm
+    sprites/bow_east.spm
+    sprites/bow_north.spm
+    sprites/bow_south.spm
+    sprites/bow_west.spm
     sprites/coin.spm
     sprites/flail.spm
     sprites/heart.spm
