CMakeLists: Break at _start instead of main
Break at the _start label instead of main. This allows even early
initialization to be debugged

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,7 +178,7 @@ add_custom_command(
 )
 
 add_custom_command(
-    COMMAND ${PYTHON3} ${CMAKE_SOURCE_DIR}/scripts/syms2labels.py ${CMAKE_PROJECT_NAME}.sym ${CMAKE_PROJECT_NAME}-debug.ll --break main
+    COMMAND ${PYTHON3} ${CMAKE_SOURCE_DIR}/scripts/syms2labels.py ${CMAKE_PROJECT_NAME}.sym ${CMAKE_PROJECT_NAME}-debug.ll --break _start
     DEPENDS ${CMAKE_PROJECT_NAME}.sym ${CMAKE_SOURCE_DIR}/scripts/syms2labels.py
     OUTPUT ${CMAKE_PROJECT_NAME}-debug.ll
     VERBATIM
